src/test/deca/syntax/valid/Commentaire_valide.deca
// Description:
//    commentaire valide
//
// Resultats:
//    Affichage de Hello world!
//
// Historique:
//    cree le 04/01/2023

{
    /*
    Le commentaire suivant est valide, cette fonction affiche Hello World!
    */
    println("Hello world!");        
}
